# palaver

./: .appveyor.yml  .travis.yml  Cargo.toml  README.md  azure-pipelines.yml
.circleci/: config.yml
.github/: dependabot.yml
examples/: echo.rs  echo_no_main.rs
src/: env.rs  ext.rs  file.rs  fork.rs  lib.rs  proc.rs  proc_self.rs  process.rs  socket.rs  thread.rs  valgrind.rs
tests/: env.rs  fd_iter.rs  fork.rs  proc.rs  proc_self.rs
