[package]
name = "palaver"
version = "0.1.0"
license = "MIT OR Apache-2.0"
authors = ["Alec Mocatta <alec@mocatta.net>"]
categories = ["os::unix-apis","os::windows-apis","os::macos-apis"]
keywords = ["polyfill","pal","platform-abstraction"]
description = """
Cross-platform polyfills.

This library attempts to provide reliable polyfills for functionality that isn't implemented on all platforms, for example `gettid`, `memfd_create`, `fexecve`, `/proc/self`, as well as providing non-atomic versions of functions like `accept4`, `socket`+`SOCK_CLOEXEC`, `pipe2`, an other miscellanea like `seal` to make a file descriptor read-only thus suitable for `fexecve`.
"""
repository = "https://github.com/alecmocatta/palaver"
homepage = "https://github.com/alecmocatta/palaver"
documentation = "https://docs.rs/palaver/0.1.0"
readme = "README.md"
edition = "2018"

[badges]
appveyor = { repository = "alecmocatta/palaver" }
circle-ci = { repository = "alecmocatta/palaver" }
#gitlab = { repository = "alecmocatta/palaver" }
travis-ci = { repository = "alecmocatta/palaver" }

maintenance = { status = "actively-developed" }

[dependencies]
valgrind_request = "1.1"
void = "1.0"
bitflags = "1.0"
lazy_static = "1.0"

[target.'cfg(unix)'.dependencies]
libc = "=0.2.46"
nix = "0.11"

[target.'cfg(windows)'.dependencies]
winapi = {version = "0.3", features = ["processthreadsapi"]}

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
mach = "0.2"

[target.'cfg(any(target_os = "android", target_os = "linux"))'.dependencies]
procinfo = "0.4"

[replace]
"libc:0.2.46" = {git = "https://github.com/alecmocatta/libc"}

[dev-dependencies]
serde_json = "1.0"
escargot = "0.4"

[[test]]
name = "test"
path = "tests/fd_iter.rs"
harness = false
