[package]
name = "palaver"
version = "0.2.1"
license = "MIT OR Apache-2.0"
authors = ["Alec Mocatta <alec@mocatta.net>"]
categories = ["os::unix-apis","os::windows-apis","os::macos-apis"]
keywords = ["polyfill","pal","platform-abstraction"]
description = """
Cross-platform polyfills.

This library attempts to provide reliable polyfills for functionality that isn't implemented on all platforms.
"""
repository = "https://github.com/alecmocatta/palaver"
homepage = "https://github.com/alecmocatta/palaver"
documentation = "https://docs.rs/palaver/0.2.1"
readme = "README.md"
edition = "2018"

[badges]
appveyor = { repository = "alecmocatta/palaver" }
circle-ci = { repository = "alecmocatta/palaver" }
#gitlab = { repository = "alecmocatta/palaver" }
travis-ci = { repository = "alecmocatta/palaver" }

maintenance = { status = "actively-developed" }

[features]
default = ["nightly"]
nightly = ["valgrind_request"]

[dependencies]
valgrind_request = { version = "1.1", optional = true }
void = "1.0"
bitflags = "1.0"
lazy_static = "1.0"
try_from = "0.3"

[target.'cfg(unix)'.dependencies]
libc = "0.2.47"
nix = "0.13"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["processthreadsapi"] }

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
mach = "0.2"

[target.'cfg(any(target_os = "android", target_os = "linux"))'.dependencies]
procinfo = "0.4"

[dev-dependencies]
serde_json = "1.0"
escargot = "0.4"

[[test]]
name = "test"
path = "tests/fd_iter.rs"
harness = false
