[package]
name = "palaver"
version = "0.3.0-alpha.3"
license = "MIT OR Apache-2.0"
authors = ["Alec Mocatta <alec@mocatta.net>"]
categories = ["os::unix-apis","os::windows-apis","os::macos-apis"]
keywords = ["polyfill","pal","platform-abstraction"]
description = """
Cross-platform polyfills.

This library attempts to provide reliable polyfills for functionality that isn't implemented on all platforms.
"""
repository = "https://github.com/alecmocatta/palaver"
homepage = "https://github.com/alecmocatta/palaver"
documentation = "https://docs.rs/palaver/0.3.0-alpha.3"
readme = "README.md"
edition = "2018"

[badges]
azure-devops = { project = "alecmocatta/palaver", pipeline = "tests" }
maintenance = { status = "actively-developed" }

[features]
nightly = ["valgrind_request"]

[package.metadata.docs.rs]
all-features = true

[dependencies]
bitflags = "1.0"
heapless = "0.5"
lazy_static = "1.0"
replace_with = "0.1"
typenum = "1.10"
valgrind_request = { version = "1.1", optional = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2.47"
nix = "0.16"
twox-hash = { version = "1.5", default-features = false }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["processthreadsapi"] }

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
mach = "0.3"

[target.'cfg(any(target_os = "android", target_os = "linux"))'.dependencies]
procfs = { version = "0.7", default-features = false }

[dev-dependencies]
serde_json = "1.0"
escargot = "0.5"
rand = "0.7"

[[test]]
name = "fd_iter"
harness = false
[[test]]
name = "fork"
harness = false
